minikube-dev/services/order/k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: minikube-dev
spec:
  ports:
  - name: grpc-50051
    port: 50051
    targetPort: 50051
  selector:
    app: order
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: order
    date: 2022-11-11
    version: v-178d7b1
  name: order
  namespace: minikube-dev
spec:
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
        version: v-178d7b1
    spec:
      containers:
      - env:
        - name: PORT
          value: "50051"
        image: ghcr.io/anddd7/monorepo/order:178d7b1
        livenessProbe:
          grpc:
            port: 50051
          initialDelaySeconds: 10
        name: order
        ports:
        - containerPort: 50051
          name: grpc
        readinessProbe:
          grpc:
            port: 50051
          initialDelaySeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: order
  namespace: minikube-dev
spec:
  host: order
  subsets:
  - labels:
      version: v-178d7b1
    name: v-178d7b1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-grpc
  namespace: minikube-dev
spec:
  gateways:
  - dynamicloading-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /order.InternalService
    route:
    - destination:
        host: order
        subset: v-178d7b1
